# Qwen3-ASR-causal

./: .gitignore  README.md  pyproject.toml
benchmarks/macos_qwen3/: README.md  run_wer_rtf.py
benchmarks/macos_qwen3/en30_speed4_no_vad/: results.json  summary.csv  summary.md
benchmarks/macos_qwen3/runs/metal_decoder_rolling_en30/: results.json
benchmarks/qwen3_streaming_rtf/: README.md  generate_combined_rtf_svg.py  results.json
benchmarks/qwen3_vllm_h100/: IMPLEMENTATION_NOTES.md  README.md  a100_normal_warm.jsonl  a100_normal_warm.summary.json  run_vllm_h100.py
benchmarks/qwen3_vllm_h100/results/: a100_causal_vllm_live_delta_mp_asyncpatch2_jfk_x2.jsonl  a100_causal_vllm_live_delta_mp_asyncpatch2_jfk_x2.summary.json  a100_normal_jfk_x2.jsonl  a100_normal_jfk_x2.summary.json
docs/: streaming_contract.md
examples/: hf_transcribe.py  vllm_live_env.sh  vllm_text_transcribe.py  vllm_transcribe.py
experiments/qwen3-causal/: README.md  RUNS.md
experiments/qwen3-causal/qwen3_streaming/: decoder_ce.py  gate.py  metrics.py  tower_distill.py
experiments/qwen3-causal/scripts/: bench_dual_wer.py  eval_cached_full_hypothesis.py  measure_flops.py  oracle_commit_from_events.py  rescore_jsonl.py  train_decoder_lora_ce.py  train_tower_distill.py  tune_stable_commit_from_events.py
experiments/qwen3-causal/tests/: test_decoder_ce.py  test_oracle_commit_from_events.py  test_streaming_metrics.py  test_tower_distill.py  test_tune_stable_commit_from_events.py
src/qwen3_asr_causal/: __init__.py  asr.py  causal.py  cli.py  languages.py  metal.py  model.py  model_paths.py  online.py  types.py  vllm.py
tests/: qwen3_streaming_fakes.py  test_causal_encoder.py  test_cli.py  test_macos_qwen3_benchmark.py  test_qwen3_streaming_causal_parity.py  test_qwen3_streaming_causal_rolling.py  test_qwen3_streaming_causal_streamer.py  test_qwen3_streaming_features.py  test_qwen3_streaming_model_decode.py  test_qwen3_streaming_processor.py  test_qwen3_streaming_rolling_decode.py  test_qwen3_streaming_streamer.py  test_qwen3_vllm_asr_full.py  test_qwen3_vllm_metal_asr.py  test_stable_commit.py  test_types.py  test_vllm_helpers.py
