[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-asr-causal"
version = "0.1.0"
description = "Standalone causal streaming runtime for Qwen3-ASR"
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { file = "LICENSE" }
authors = [{ name = "Quentin Fuxa", email = "quentin.fuxa@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "huggingface-hub>=0.25.0",
    "numpy",
    "soundfile",
    "torch>=2.0.0",
    "transformers>=4.57",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "qwen-asr>=0.0.6"]
streaming = [
    "qwen-asr>=0.0.6",
]
vllm = [
    "qwen-asr>=0.0.6",
    'vllm[audio]>=0.20.0; sys_platform == "linux"',
    'torchvision; sys_platform == "linux" and platform_machine == "x86_64"',
]
metal = [
    'mlx>=0.11.0; sys_platform == "darwin" and platform_machine == "arm64"',
    'vllm-metal[stt]; python_version >= "3.12" and python_version < "3.13" and sys_platform == "darwin" and platform_machine == "arm64"',
]

[project.urls]
Homepage = "https://github.com/QuentinFuxa/Qwen3-ASR-causal"
Model = "https://huggingface.co/qfuxa/qwen3-asr-0.6b-streaming"

[project.scripts]
qwen3-asr-causal = "qwen3_asr_causal.cli:main"

[tool.uv.sources]
vllm-metal = { url = "https://github.com/vllm-project/vllm-metal/releases/download/v0.2.0-20260519-054638/vllm_metal-0.2.0-cp312-cp312-macosx_11_0_arm64.whl" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
